--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -3,6 +3,7 @@
             <h1>Login</h1>
             <input type="text" name="" placeholder="Username">
             <input type="password" name="" placeholder="Password">
-            <button class="btn btn-primary" (click)="onClose()">Login</button><br/>
+            <button routerLink="">Login</button><br/>
             <a routerLink="/register" class="btn btn-link">Create account</a>
 </form>
+<a routerLink="/register">Register</a>
