Created design for navbar when the user is not logged in

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
  <div class="header">
-  <a href="#default" class="logo">Logo</a>
+  <a class="logo">Logo</a>
   <div class="header-right">
     <a routerLink="/register">Register</a>
     <a routerLink="/login">Login</a>
   </div>
 </div> 
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
