--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,7 +5,6 @@
             <input type="text" name="" placeholder="Email">
             <input type="password" name="" placeholder="Password">
             <input type="password" name="" placeholder="Confirm Password">
-            <button routerLink="">Register</button><br/>
+            <button routerLink="**">Register</button><br/>
             <a routerLink="/login" class="btn btn-link">Already have an account?</a>
 </form>
-<a routerLink="/register">Register</a>
