--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,7 @@
   overflow: hidden;
   background-color: #f1f1f1;
   padding: 20px 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
 
 /* Style the header links */
