--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,17 @@
     <a routerLink="/login">Login</a>
   </div>
 </div> 
-<app-navbar></app-navbar>
+
+<div class="splitscreen">
+  
+  <div class="left">
+      <app-navbar></app-navbar>
+  </div>
+
+  <div class="right">
+      <app-homepage></app-homepage>
+  </div>
+
+</div>
+
 <router-outlet></router-outlet>
