Some homepage design changed

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,14 +1,13 @@
 <div class="body">
 
     <input type="text" name="" placeholder="search">
-    <button routerLink="/" class="btn btn-link">Search</button>
+    <button routerLink="/" class="btn btn-link">Search</button><br/>
+    <button routerLink="/" class="btn btn-link">Filter</button>
+    <button routerLink="/" class="btn btn-link">Sort</button>
     
-    <div class="fs">
-        <button routerLink="/" class="btn btn-link">Filter</button>
-        <button routerLink="/" class="btn btn-link">Sort</button>
-    </div>
-    <!-- <br/> -->
+    <div class="moviebox"><img src="assets/daaa.jfif" alt="" ></div><br/>
+    <div class="moviebox"><img src="assets/daaa.jfif" alt="" ></div><br/>
+    <div class="moviebox"><img src="assets/daaa.jfif" alt="" ></div><br/>
+    <div class="moviebox"><img src="assets/daaa.jfif" alt="" ></div>
 
-    <img src="images/daaa.jfif" alt="" style="width:200px;height:300px;">
-    
 </div>
