--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -41,17 +41,13 @@
   float: right;
 }
 
-.row{
-  display: flex;
-}
-
 .splitscreen {
   display:flex;
 }
 .splitscreen .left {
-  flex: 0;
+  flex: 15%;
 }
 .splitscreen .right {
-  flex: 1;
+  flex: 85%;
 }
 
