--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,8 +1,6 @@
 .body{
-    margin-left: 40px;
-    position: absolute;
-    width: 80%;
-    height: 100vh;
+    position: inherit;
+    height: 100%;
     padding: 20px;
     background: rgb(231, 236, 240);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
@@ -16,14 +14,15 @@
     display: block;
     margin: 20px auto;
     text-align: left;
-    padding: 12px 20px;
+    padding: 10px 20px;
     width: 700px;
     border-radius: 4px;
     outline: none;
 }
 
 .body button{
-    margin: 22px;
+    margin: 21px;
+    margin-right: 15px;
     border: 0;
     background-color:rgba(194, 195, 196, 0.774);
     color: rgb(0, 0, 0);
@@ -39,12 +38,16 @@
     background: darkgray;
 }
 
-.fs{
-    margin: 5px;
-    line-height: 40px;
+.body img{
+    padding: 10px;
+    margin: 0 auto;
+    width: 200px;
 }
 
-.body img{
-    margin: 0 auto;
-    width: 1000px;
+.moviebox{
+    width: 70%;
+    height: 20vh;
+    padding: 20px;
+    background: rgb(185, 185, 185);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
