--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 .navbar{
     height: 100%;
-    position: inherit;
+    position: sticky;
     padding: 20px;
     background: rgb(185, 214, 238);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
