--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -1,8 +1,9 @@
 <div class="backdrop"></div>
-<form class="box">
+<div class="box">
             <h1>Login</h1>
-            <input type="text" name="" placeholder="Username">
-            <input type="password" name="" placeholder="Password">
-            <button routerLink="**">Login</button><br/>
+            <span *ngIf="isInvalid">Invalid Credentials</span>
+            <input type="text" name="username" placeholder="Username" [(ngModel)]="username">
+            <input type="password" name="password" placeholder="Password" [(ngModel)]="password">
+            <button (click)="login()">Login</button><br/>
             <a routerLink="/register" class="btn btn-link">Create account</a>
-</form>
+</div>
