--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,7 @@
     <a class="logo">Logo</a>
     <div class="header-right">
       <a routerLink="/register">Register</a>
-      <a routerLink="/login">Login</a>
+      <a *ngIf="userService.isLoggedIn()" routerLink="/login">Login</a>
+      <a *ngIf="!userService.isLoggedIn()" (click)="userService.logout()" style="cursor: pointer;">Logout</a>
     </div>
   </div>
