--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,10 +1,10 @@
 <div class="backdrop"></div>
-<form class="box">
+<div class="box">
             <h1>Create an account</h1>
-            <input type="text" name="" placeholder="Username">
-            <input type="text" name="" placeholder="Email">
-            <input type="password" name="" placeholder="Password">
-            <input type="password" name="" placeholder="Confirm Password">
-            <button routerLink="**">Register</button><br/>
+            <input type="text" name="" placeholder="Username" [(ngModel)]="username">
+            <input type="text" name="" placeholder="Email" [(ngModel)]="email">
+            <input type="password" name="" placeholder="Password" [(ngModel)]="password">
+            <input type="password" name="" placeholder="Confirm Password" [(ngModel)]="cpassword">
+            <button (click)="register()">Register</button><br/>
             <a routerLink="/login" class="btn btn-link">Already have an account?</a>
-</form>
+</div>
