--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,12 +2,13 @@
 
     <input type="text" name="" placeholder="search">
     <button routerLink="/" class="btn btn-link" (click)="getAllMovies()">Search</button><br/>
-    <button routerLink="/" class="btn btn-link" >Filter</button>
+    <button routerLink="/filter" class="btn btn-link" >Filter</button>
     <button routerLink="/" class="btn btn-link">Sort</button>
     
-    <div *ngFor="let tag of tags">
+    <!-- <div *ngFor="let tag of tags">
         {{tag}}
-    </div>
+    </div> -->
+
     <div *ngFor="let movie of movies">
         <div class="moviebox">
             <div class="splitscreen">
