--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,8 +1,8 @@
 <div class="box">
-    <div *ngFor="let tag of tags">
+    <div *ngFor="let movieGenre of movieGenres | keyvalue">
 
-        <input type="checkbox"> {{tag}}
+        <input type="checkbox"  (change)="toggleMovieGenres(movieGenre.key)" > {{movieGenre.value}}
         
     </div>
-    <button routerLink="/" class="btn btn-link" >Submit</button>
+    <button routerLink="/" class="btn btn-link" (click)="submitFilter()">Submit</button>
 </div>
