--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,9 @@
   </div>
 
   <div class="right">
-      <app-homepage></app-homepage>
+      <!-- <app-homepage></app-homepage> -->
+      <router-outlet></router-outlet>
   </div>
 
 </div>
 
-<router-outlet></router-outlet>
