--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -2,7 +2,7 @@
 
     <input type="text" name="" placeholder="search">
     <button routerLink="/" class="btn btn-link" (click)="getAllMovies()">Search</button><br/>
-    <button routerLink="/filter" class="btn btn-link">Filter</button>
+    <button class="btn btn-link" (click)="openFilter()">Filter</button>
     <button routerLink="/" class="btn btn-link">Sort</button>
     
     <!-- <div *ngFor="let tag of tags">
