Sende and Get data trough the filter dialog

--- a/src/app/filter-dialog/filter-dialog.component.html
+++ b/src/app/filter-dialog/filter-dialog.component.html
@@ -5,5 +5,5 @@
         
     </div>
 
-    <button mat-raised-button class="btn btn-link" >Submit</button>
+    <button mat-raised-button [mat-dialog-close]="tags" >Submit</button>
 </div>
