--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
-    <button routerLink="/">Home</button><br/>
+    <button >Home</button><br/>
     <button routerLink="/">Watchlist</button><br/>
-    <button routerLink="/diary">Diary</button><br/>
+    <button routerLink="/">Diary</button><br/>
 </div>
 
