Navigate with the Navbar to the Trending Movies

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-    <button >Home</button><br/>
+    <button (click)="goToTrending()">Trending</button><br/>
     <button routerLink="/">Watchlist</button><br/>
     <button routerLink="/">Diary</button><br/>
 </div>
