--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <button routerLink="/homepage">Home</button><br/>
-    <button routerLink="/">Watchlist</button><br/>
+    <button routerLink="/watchlist">Watchlist</button><br/>
     <button routerLink="/diary">Diary</button><br/>
 </div>
 
