Implemented Sorting Movies Method

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -3,7 +3,7 @@
     <input type="text" name="" placeholder="search">
     <button routerLink="/" class="btn btn-link">Search</button><br/>
     <button class="btn btn-link" (click)="openFilter()">Filter</button>
-    <button routerLink="/" class="btn btn-link">Sort</button>
+    <button class="btn btn-link" (click)="sortMovies()">Sort</button>
     
     <!-- <div *ngFor="let tag of tags">
         {{tag}}
