Implemented Login with dialog

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <a class="logo">Logo</a>
     <div class="header-right">
       <a *ngIf="!authentificationService.isLoggedIn()" routerLink="/register">Register</a>
-      <a *ngIf="!authentificationService.isLoggedIn()" routerLink="/login">Login</a>
+      <a *ngIf="!authentificationService.isLoggedIn()" (click)="openLogin()">Login</a>
       <a *ngIf="authentificationService.isLoggedIn()">{{userService.currentUser?.username}}</a>
       <a *ngIf="authentificationService.isLoggedIn()" (click)="authentificationService.logout()" style="cursor: pointer;">Logout</a>
     </div>
