--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -4,5 +4,5 @@
             <input type="text" name="username" placeholder="Username" [(ngModel)]="username">
             <input type="password" name="password" placeholder="Password" [(ngModel)]="password">
             <button (click)="login()">Login</button><br/>
-            <a routerLink="/register" class="btn btn-link">Create account</a>
+            <a class="btn btn-link">Create account</a>
 </div>
