--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,25 +1,3 @@
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.75);
-    z-index: 50;
-  }
-  
-  .box {
-    position: fixed;
-    top: 15vh;
-    left: 35vw;
-    width: 30vw;
-    height: 50vh;
-    padding: 20px;
-    background: white;
-    z-index: 100;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-    text-align: center;
-  }
   .box h1{
     color:rgb(36, 121, 190);
     font-weight: 500;
@@ -61,4 +39,9 @@
 
   .box a:hover{
     font-size: 16px;
+  }
+
+  .box button:hover{
+    cursor: pointer;
+    background-color:rgb(83, 173, 246)
   }
