Get watchlist for user

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <button (click)="goToTrending()">Trending</button><br/>
-    <button routerLink="/">Watchlist</button><br/>
+    <button routerLink="/watchlist">Watchlist</button><br/>
     <button routerLink="/">Diary</button><br/>
 </div>
 
