Fixed Watchlist get

--- a/src/app/watchlist-page/watchlist-page.component.html
+++ b/src/app/watchlist-page/watchlist-page.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-    <div *ngFor="let movie of movieService.movies">
+    <div *ngFor="let movie of movies">
         <div class="moviebox">
             <img  [src]="movie.posterImgUrl" alt="">
             <span>{{movie.movieTitle}}</span>
