Routerlink from watchlist to movie-details

--- a/src/app/watchlist-page/watchlist-page.component.html
+++ b/src/app/watchlist-page/watchlist-page.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-        <div *ngFor="let movie of movies" class="moviebox">
+        <div *ngFor="let movie of movies" class="moviebox" [routerLink] = "['/movie-details', movie.movieId]">
             <img  [src]="movie.posterImgUrl" alt="">
             <span>{{movie.movieTitle}}</span>
     </div>
