Remove movie from watchlist feature

--- a/src/app/watchlist-page/watchlist-page.component.html
+++ b/src/app/watchlist-page/watchlist-page.component.html
@@ -1,6 +1,7 @@
 <div class="body">
-        <div *ngFor="let movie of movies" class="moviebox" [routerLink] = "['/movie-details', movie.movieId]">
-            <img  [src]="movie.posterImgUrl" alt="">
-            <span>{{movie.movieTitle}}</span>
+        <div *ngFor="let movie of movies" class="moviebox" >
+            <button (click) = "removeWatchlist(movie.movieId)" class="close">Remove</button>
+            <img  [src]="movie.posterImgUrl" alt="" [routerLink] = "['/movie-details', movie.movieId]">
+            <span [routerLink] = "['/movie-details', movie.movieId]">{{movie.movieTitle}}</span>
     </div>
 </div>
