--- a/src/app/watchlist-page/watchlist-page.component.css
+++ b/src/app/watchlist-page/watchlist-page.component.css
@@ -10,12 +10,13 @@
     display:inline-block;
     cursor: pointer;
     width: 220px;
-    height: 40vh;
+    height: 41vh;
     margin: 30px;
     background: rgb(185, 185, 185);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     outline: none;
     text-align: center;
+    padding: 5px;
 }
 
 .moviebox:hover{
@@ -24,8 +25,18 @@
 
 .body img{
     display: block;
-    margin-top: 23px;
-    margin-right: auto;
-    margin-left: auto;
-    width: 170px;
+    margin: 3px auto 2px auto;
+    width:  170px;
+    height: 250px;
+    object-fit: cover;
+}
+
+.body span{
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.body button{
+    border: 0;
+    background-color: rgb(144, 144, 151);
 }
