--- a/src/app/requestmovie/requestmovie.component.css
+++ b/src/app/requestmovie/requestmovie.component.css
@@ -6,9 +6,58 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
 
-.body h1{
+.mat-card{
+    width: 35%;
+    margin-left: 50px;
+    font-size: 35px;
+    text-align: center;
     padding: 30px;
-    margin-left: 100px;
-    font-size: 30px;
-    font-weight: 500;
+    background-color: rgb(201, 201, 201);
+}
+
+.mat-toolbar{
+    font-weight: normal;
+    font-size: 17px;
+}
+
+.body p{
+    margin: 0 0 0 20px;
+    font-size: 17px;
+}
+
+.mat-form-field{
+    width: 400px;
+}
+
+.mat-toolbar-single-row {
+    height: auto !important;
+    background: transparent;
+}
+
+.mat-icon-button{
+    color: darkgrey;
+}
+
+.mat-icon-button:hover{
+    color: rgb(65, 64, 64);
+}
+
+.mat-raised-button{
+    margin: 20px 20px 0 20px;
+    background-color: darkgrey;
+}
+
+.mat-raised-button:hover{
+    background-color: darkgrey;
+}
+
+#fileUpload {
+    position: absolute;
+    z-index: 9;
+    opacity: 0;
+    height: 100%;
+    width: 100%;
+    left: 0px;
+    top: 0px;
+    cursor: pointer;
 }
