Implemented Viewed button in movie details page

--- a/src/app/movie-details-page/movie-details-page.component.html
+++ b/src/app/movie-details-page/movie-details-page.component.html
@@ -4,7 +4,7 @@
         <div class="left">
             <img [src]="movie?.posterImgUrl" alt="" >
             <button (click)="addWatchlist()"><strong>+ </strong>Add to Watchlist</button><br/>
-            <button><strong>+ </strong>Add to Viewed</button>
+            <button (click)="addDiary()"><strong>+ </strong>Add to Viewed</button>
         </div>
       
         <div class="right">
