--- a/src/app/diary/diary.component.css
+++ b/src/app/diary/diary.component.css
@@ -7,12 +7,13 @@
 }
 
 .body img{
+    cursor: pointer;
     padding: 10px;
     width: 100px;
 }
 
 .moviebox{
-    cursor: pointer;
+    /* cursor: pointer; */
     width: 80%;
     height: 20vh;
     padding: 20px;
@@ -27,6 +28,7 @@
 }
 
 .title{
+    cursor: pointer;
     padding: 10px;
     font-size: 25px;
     font-weight: bold;
