Implement getReviews for user

--- a/src/app/diary/diary.component.html
+++ b/src/app/diary/diary.component.html
@@ -1,6 +1,7 @@
 <div class="body">
 
         <div *ngFor="let movie of movies" class="moviebox">
+            
             <div class="splitscreen">
   
                 <div class="left">
@@ -9,7 +10,7 @@
               
                 <div class="right"> 
                     <div class="title" [routerLink] = "['/movie-details', movie.movieId]">{{movie.movieTitle}}</div>
-                    {{movie.movieDesc}}
+                    <div *ngFor = "let review of reviews[movie.movieId]"> {{review.reviewText}}<br/></div>
                 </div>
                 <button (click) = "removeDiary(movie.movieId)" class="close">Remove</button>
              </div>
