--- a/src/app/movie-details-page/movie-details-page.component.html
+++ b/src/app/movie-details-page/movie-details-page.component.html
@@ -12,6 +12,8 @@
                 {{movie?.movieTitle}}
             </div>
 
+            <ngb-rating [max]="10" [(rate)]="rating" [readonly]="false"></ngb-rating>
+
             <div class="length">{{movie?.lengthMinutes}} minutes | {{movie?.releaseDate}}.</div>
             
             <div class="desc"><strong>Description: </strong>{{movie?.movieDesc}} </div>
