--- a/src/app/movies/movies.component.css
+++ b/src/app/movies/movies.component.css
@@ -7,12 +7,9 @@
 }
 
 .body input[type = "text"]{
-    float: left;
     border: 1;
     border-color: rgba(194, 195, 196, 0.774);
     background: rgba(194, 195, 196, 0.774);
-    display: block;
-    margin: 20px auto;
     text-align: left;
     padding: 10px 20px;
     width: 700px;
@@ -21,8 +18,6 @@
 }
 
 .body button{
-    margin: 22px;
-    margin-right: 15px;
     border: 0;
     background-color:rgba(194, 195, 196, 0.774);
     color: rgb(0, 0, 0);
@@ -30,6 +25,7 @@
     padding: 12px;
     text-decoration: none;
     font-size: 18px;
+    font-weight: 400;
     line-height: 13px;
     width: 90px;
     border-radius: 10px;
@@ -50,7 +46,7 @@
     width: 80%;
     height: 20vh;
     padding: 20px;
-    margin-bottom: 20px;
+    margin: 30px 0;
     background: rgb(185, 185, 185);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     outline: none;
