--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,9 @@
-<div class="navbar">
+<div class="navmenu">
     <button (click)="goToTrending()">Trending</button>
     <button *ngIf="!authentificationService.isLoggedIn()" (click)="dialogManagerService.openLogin()"> Watchlist </button>
     <button *ngIf="authentificationService.isLoggedIn()" routerLink="/watchlist"> Watchlist </button>
-
     <button *ngIf="!authentificationService.isLoggedIn()" (click)="dialogManagerService.openLogin()"> Diary </button>
     <button *ngIf="authentificationService.isLoggedIn()" routerLink="/"> Diary </button>
-
     <button *ngIf="!authentificationService.isLoggedIn()" (click)="dialogManagerService.openLogin()"> Request </button>
     <button *ngIf="authentificationService.isLoggedIn()" routerLink="/request"> Request </button>
 </div>
