--- a/src/app/watchlist-page/watchlist-page.component.html
+++ b/src/app/watchlist-page/watchlist-page.component.html
@@ -1,6 +1,6 @@
-<div class="body">
-        <div *ngFor="let movie of movies" class="moviebox" >
-            <button (click) = "removeWatchlist(movie.movieId)" class="close">Remove</button>
+<div class="watchlistbody">
+        <div *ngFor="let movie of movies" class="moviebox" style="position: relative;">
+            <button class="btn-close" mat-mini-fab color="warn" (click) = "removeWatchlist(movie.movieId)"><mat-icon>delete</mat-icon></button>
             <img  [src]="movie.posterImgUrl" alt="" [routerLink] = "['/movie-details', movie.movieId]">
             <span [routerLink] = "['/movie-details', movie.movieId]">{{movie.movieTitle}}</span>
     </div>
