--- a/src/app/requestmovie/requestmovie.component.css
+++ b/src/app/requestmovie/requestmovie.component.css
@@ -7,8 +7,9 @@
 }
 
 .mat-card{
-    width: 35%;
-    margin-left: 50px;
+    width: 39%;
+    margin-left: 70px;
+    margin-bottom: 20px;
     font-size: 35px;
     text-align: center;
     padding: 30px;
