--- a/src/app/requestmovie/requestmovie.component.html
+++ b/src/app/requestmovie/requestmovie.component.html
@@ -2,6 +2,7 @@
           <mat-card>
             Request Missing Movie
           </mat-card>
+
           <p>
             <mat-form-field appearance="standard">
               <mat-label *ngIf="!isInvalid">Movie Title</mat-label>
@@ -9,59 +10,70 @@
               <input [(ngModel)]="movie.movieTitle" matInput placeholder="Placeholder" required>
             </mat-form-field>
           </p>
+
           <p>
             <mat-form-field appearance="standard">
               <mat-label>Movie Description</mat-label>
-              <input matInput placeholder="Placeholder" required>
+              <input [(ngModel)]="movie.movieDesc" matInput placeholder="Placeholder" required>
             </mat-form-field>
           </p>
-          <p>
-            <mat-form-field appearance="standard">
-              <mat-label>Release Date</mat-label>
-              <input matInput placeholder="Placeholder" required>
-            </mat-form-field>
-          </p>
+
           <p>
             <mat-form-field appearance="standard">
               <mat-label>Trailer Url</mat-label>
-              <input matInput placeholder="Placeholder" required>
+              <input [(ngModel)]="movie.trailerUrl" matInput placeholder="Placeholder" required>
             </mat-form-field>
           </p>
+
           <p>
             <mat-form-field appearance="standard">
               <mat-label>Length(min)</mat-label>
-              <input matInput placeholder="Placeholder" required>
+              <input [(ngModel)]="movie.lengthMinutes" matInput placeholder="Placeholder" required>
             </mat-form-field>
           </p>
+
           <p>
             <mat-form-field appearance="standard">
               <mat-label>Movie Directors</mat-label>
-              <input matInput placeholder="Placeholder" required>
+              <input [(ngModel)]="movie.movieDirectors" matInput placeholder="Placeholder" required>
             </mat-form-field>
           </p>
+
           <p>
             <mat-form-field appearance="standard">
               <mat-label>Movie Writers</mat-label>
-              <input matInput placeholder="Placeholder" required>
+              <input [(ngModel)]="movie.movieWriters" matInput placeholder="Placeholder" required>
             </mat-form-field>
           </p>
+
           <p>
             <mat-form-field appearance="standard">
               <mat-label>Movie Actors</mat-label>
-              <input matInput placeholder="Placeholder" required>
+              <input [(ngModel)]="movie.movieActors" matInput placeholder="Placeholder" required>
             </mat-form-field>
           </p>
+
           <p>
             <mat-form-field appearance="standard">
               <mat-label>Tags</mat-label>
               <input matInput placeholder="Placeholder">
             </mat-form-field>
           </p>
+
           <p>
-            <mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Release Date</mat-label>
+            <input [(ngModel)]="movie.releaseDate" matInput [matDatepicker]="picker">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+          </p>
+
+          <p>
+            <mat-form-field appearance="fill">
 
               <mat-toolbar>
-                <input matInput [(ngModel)]="myfilename" readonly name="memberContactNo" />
+                <input  matInput [(ngModel)]="myfilename" readonly name="memberContactNo" />
                 <button mat-icon-button>
                   <mat-icon>attach_file</mat-icon>
                 </button>
@@ -71,6 +83,7 @@
                 multiple="multiple" accept="image/*" />
             </mat-form-field>
           </p>
+
           <div>
             <button (click)="sendRequest()" mat-raised-button >Send Request</button>
           </div>
