--- a/src/app/movie-details-page/movie-details-page.component.html
+++ b/src/app/movie-details-page/movie-details-page.component.html
@@ -20,7 +20,7 @@
 
             <div class="trailer">
                 <strong>Trailer: </strong>
-                <a href="movie.trailerUrl">{{movie?.trailerUrl}}</a>
+                <a (click)="trailerLink()"  >{{movie?.trailerUrl}}</a>
             </div>
 
             <div class="creators">
